@@ -2,6 +2,7 @@ v0.1.3 - beta
 - when hovering over some buttons, tooltips with keyboard shortcuts are shown
 - changing position of a chord
 - config and themes (partially) are now saved as .json file for easier editing
+- adjusted light theme so there is less contrast
 
 v0.1.2 - beta
 - now chords can be added with numpad keys
